Test commit from cloud 9

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "crypto": "*",
     "async": "*",
     "validator": "*",
-    "connect-mongo": "*"
+    "connect-mongo": "*",
+    "mongoose-auth": "*"
   }
 }
