--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "async": "*",
     "validator": "*",
     "connect-mongo": "*",
-    "mongoose-auth": "*"
+    "mongoose-auth": "*",
+	"everyauth": "*"
   }
 }
